package changes for ejs

--- a/views/checklogin.ejs
+++ b/views/checklogin.ejs
@@ -2,7 +2,7 @@
 <% if(r.uname === "test" && r.pwd === "12345") {%>
     <H2> SUCCESS</H2>
 <%} else{ %>
-    <H2>FAILED</H2>
+    <H2 color="red">FAILED</H2>
 <%} %>
 <!-- <%= r.uname %>
 <%= r.pwd %> -->
