--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,6 @@
 <form action="/checklogin" method="POST">
     <input type="text" placeholder="user name" id="uname" name="uname">
     <input type="password" placeholder="Password" id="password" name="pwd">
-    <button typ="submit">Login</button>
+    <button type="submit" id="loginbtn">Login</button>
 </form>
 </body>
