--- a/views/checklogin.ejs
+++ b/views/checklogin.ejs
@@ -3,6 +3,7 @@
     <H2> SUCCESS</H2>
 <%} else{ %>
     <font color="red"><H2> FAILED</H2></font>
+    <b>TRY AGAIN!!</b>
 <%} %>
 <!-- <%= r.uname %>
 <%= r.pwd %> -->
