--- a/views/checklogin.ejs
+++ b/views/checklogin.ejs
@@ -2,8 +2,8 @@
 <% if(r.uname === "test" && r.pwd === "12345") {%>
     <H2> SUCCESS</H2>
 <%} else{ %>
-    <font color="red"><H2> FAILED</H2></font>
-    <b>TRY AGAIN!!</b>
+    <font color="red"><H2> FAILED</H2>
+    <b>TRY AGAIN!!</b></font>
 <%} %>
 <!-- <%= r.uname %>
 <%= r.pwd %> -->
